--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -748,8 +748,15 @@ for (var r=0; r<datas.length;r++){
 continue;
 }
 if (d==0){
+  if (datas[r][d].includes("google.com")){
+    datas[r][d] = "https://google.com"+datas[r][d];
+  }
+  else{
+    datas[r][d] = "https://spcniftemt.pages.dev/user/"+datas[r][d];
+  }
+
   td +="<td>"+ `<div style="background-color: rgb(237, 235, 235); border-radius: 110px;height: 110px;width: 110px;margin-top: 0px;margin-left: auto;margin-right: auto;">
-                <img id="profileimage2" style=" scale:200%;border-radius: 50px; width: 50px; height: 50px; object-fit: cover;margin-top: 30px;" src="https://spcniftemt.pages.dev/user/`+datas[r][d]+`" alt="" srcset="">
+                <img id="profileimage2" style=" scale:200%;border-radius: 50px; width: 50px; height: 50px; object-fit: cover;margin-top: 30px;margin-left: 10px;" src="https://spcniftemt.pages.dev/user/`+datas[r][d]+`" alt="" srcset="">
               </div>`+"</td>";
 //  td +="<td>"+datas[r][d]+"</td>";
 
