--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -733,7 +733,7 @@ continue;
 th +="<th>"+heads[i]+"</th>";
 
 }
-var thead = "<thead><th>Edit</th>"+th+"</thead>";
+var thead = `<thead style=" z-index:101;""><th>Edit</th>`+th+"</thead>";
 var tr ="";
 for (var r=0; r<datas.length;r++){
   var td ="";
