--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -755,9 +755,11 @@ if (d==0){
     datas[r][d] = "https://spcniftemt.pages.dev/user/"+datas[r][d];
   }
 
-  td +="<td>"+ `<div style="background-color: rgb(237, 235, 235); border-radius: 110px;height: 110px;width: 110px;margin-top: 0px;margin-left: auto;margin-right: auto;">
+ /* td +="<td>"+ `<div style="background-color: rgb(237, 235, 235); border-radius: 110px;height: 110px;width: 110px;margin-top: 0px;margin-left: auto;margin-right: auto;">
                 <img  style=" scale:200%;border-radius: 50px; width: 50px; height: 50px; object-fit: cover;margin-top: 30px;margin-left: 10px;" src="`+datas[r][d]+`" alt="" srcset="">
-              </div>`+"</td>";
+              </div>`+"</td>";*/
+              td +="<td>"+ `  <img src="Profile Pics/5.JPG" alt="">`+"</td>";
+            
 //  td +="<td>"+datas[r][d]+"</td>";
 
 }
