--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -86,7 +86,7 @@ function editPopup(edit){
 var inputs = document.getElementById("popup-inner").getElementsByClassName("form-element");
 console.log(inputs)
 var now = 0;
-inputs.splice(1,1)
+//inputs.splice(1,1)
 inputs.forEach((i,jk) =>{
   console.log(i.children,udata[now])
   if(jk==0){
