--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -83,7 +83,7 @@ function editPopup(edit){
   console.log(vdatas)
   var udata = vdatas[edit-2];
   console.log(udata)
-var inputs = document.getElementById("popup-inner").getElementsByClassName("form-element");
+var inputs = document.getElementById("popup-inner").querySelectorAll("div.form-element");
 console.log(inputs)
 var now = 0;
 //inputs.splice(1,1)
