--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -83,12 +83,16 @@ function editPopup(edit){
   console.log(vdatas)
   var udata = vdatas[edit-2];
   console.log(udata)
-var inputs = document.getElementById("popup-inner").querySelectorAll("div.form-element");
+var inputs = document.getElementById("popup-inner").querySelectorAll("div");
 console.log(inputs)
 var now = 0;
-//inputs.splice(1,1)
+inputs.splice(1,1)
 inputs.forEach((i,jk) =>{
   console.log(i.children,udata[now])
+  if(jk==1){
+  
+}
+else{
   if(jk==0){
     if (udata[now].includes("google.com")){
     udata[now] = "https://google.com"+udata[now];
@@ -103,7 +107,10 @@ inputs.forEach((i,jk) =>{
     i.children[1].value = udata[now];
   }
 //  i.children[1].value = udata[now];
+
   now++
+}
+  
 })
 
 
@@ -127,22 +134,22 @@ inputs[5].children[1].selectedIndex = allotnamee;
 console.log(inputs[5].children[1].selectedIndex)
 document.getElementById("Alloted Member").innerHTML =  allotoption;
 if (udata[3].includes("M.Tech")){
-    document.getElementById("popup-inner").querySelectorAll("div.form-element")[6].style.display="none"
-      document.getElementById("popup-inner").querySelectorAll("div.form-element")[8].style.display="none"
+    document.getElementById("popup-inner").querySelectorAll("div")[6].style.display="none"
+      document.getElementById("popup-inner").querySelectorAll("div")[8].style.display="none"
 }
 else{
   console.log(vrole)
   if(vrole=="Admin"){
-      document.getElementById("popup-inner").querySelectorAll("div.form-element")[6].style.display="flex"
+      document.getElementById("popup-inner").querySelectorAll("div")[6].style.display="flex"
   }
   else{
-    document.getElementById("popup-inner").querySelectorAll("div.form-element")[6].style.display="none" 
+    document.getElementById("popup-inner").querySelectorAll("div")[6].style.display="none" 
   }
-      document.getElementById("popup-inner").querySelectorAll("div.form-element")[8].style.display="flex"
+      document.getElementById("popup-inner").querySelectorAll("div")[8].style.display="flex"
 }
 document.getElementById("popup-1").classList.toggle("active");
-console.log(document.getElementById("popup-inner").querySelectorAll("div.form-element")[inputs.length-1].children[1])
-document.getElementById("popup-inner").querySelectorAll("div.form-element")[inputs.length-1].children[1].setAttribute("onclick","updatedetails("+edit+")")
+console.log(document.getElementById("popup-inner").querySelectorAll("div")[inputs.length-1].children[1])
+document.getElementById("popup-inner").querySelectorAll("div")[inputs.length-1].children[1].setAttribute("onclick","updatedetails("+edit+")")
 }
 function addPopup(){
 var allotoption = "";
