--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -147,7 +147,7 @@ else{
   }
       document.getElementById("popup-inner").querySelectorAll("div")[8].style.display="flex"
 }
-document.getElementById("popup-1").classList.toggle("active");
+//document.getElementById("popup-1").classList.toggle("active");
 console.log(document.getElementById("popup-inner").querySelectorAll("div")[inputs.length-1].children[1])
 document.getElementById("popup-inner").querySelectorAll("div")[inputs.length-1].children[1].setAttribute("onclick","updatedetails("+edit+")")
 }
