--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -147,8 +147,7 @@ else{
   }
       document.getElementById("popup-inner").querySelectorAll("div")[8].style.display="flex"
 }
-//document.getElementById("popup-1").classList.toggle("active");
-togglePopup()
+document.getElementById("popup-1").classList.toggle("active");
 console.log(document.getElementById("popup-inner").querySelectorAll("div")[inputs.length-1].children[1])
 document.getElementById("popup-inner").querySelectorAll("div")[inputs.length-1].children[1].setAttribute("onclick","updatedetails("+edit+")")
 }
@@ -427,6 +426,7 @@ document.getElementById("popup-40").classList.toggle("active");
             </div>
           </div>
             </div>
+          </div>
             <div class="popup" id="popup-40">
  
               <div class="overlay"></div>
