--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -94,13 +94,13 @@ inputs.forEach((i,jk) =>{
 }
 else{
   if(jk==0){
-    if (udata[now].includes("google.com")){
+   /* if (udata[now].includes("google.com")){
     udata[now] = "https://google.com"+udata[now];
   }
   
   else{
     udata[now] = "https://spcniftemt.pages.dev/user/"+udata[now];
-  }
+  }*/
     i.children[0].children[0].src = udata[now];
   }
   else{
@@ -337,7 +337,7 @@ document.getElementById("popup-40").classList.toggle("active");
             <h1>Edit User Details</h1>
             <div class="form-element">
               <div style="background-color: rgb(237, 235, 235); border-radius: 110px;height: 110px;width: 110px;margin-top: 0px;margin-left: auto;margin-right: auto;">
-                <img  style=" border-radius: 50px; width: 100px; height: 100px; object-fit: cover;margin-top: 5px;margin-left: 10px;" src="`+datas[r][d]+`" alt="" srcset="">
+                <img  style=" border-radius: 50px; width: 100px; height: 100px; object-fit: cover;margin-top: 5px;margin-left: 10px;" src="" alt="" srcset="">
               </div>
             <div class="form-element">
               <span class="q">Name</span>
