--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -855,8 +855,11 @@ fetchd ();
 
             
             if (String(updatas[f].value) !== String(vdatas[id-2][f])){
-              tobeupdatehead.push(vheads[f+1]);
-              tobeupdatedata.push(updatas[f].value);
+              if(updatas.parentElement.style.display!=="none"){
+                tobeupdatehead.push(vheads[f+1]);
+                tobeupdatedata.push(updatas[f].value);
+              }
+       
             }
            }
            if (tobeupdatedata.length==0){
