--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -782,8 +782,12 @@ tr +="<tr><td>"+`<svg onclick="editPopup(`+editno+`)"  fill="#0042aa" version="1
 
 var tbody = "<tbody>"+tr+"</tbody>";
 var search2 = document.querySelector('.input-group input').value;
+var oldhtml = document.getElementById("tabdetails").innerHTML;
+var newhtml = thead+tbody;
+console.log(newhtml)
+console.log(oldhtml)
 if(search2==""){
-  if(document.getElementById("tabdetails").innerHTML!==thead+tbody){
+  if(oldhtml!==newhtml){
     document.getElementById("tabdetails").innerHTML = thead+tbody;
   }
 //document.getElementById("tabdetails").innerHTML = thead+tbody;
