--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -784,8 +784,8 @@ var tbody = "<tbody>"+tr+"</tbody>";
 var search2 = document.querySelector('.input-group input').value;
 var oldhtml = document.getElementById("tabdetails").innerHTML;
 var newhtml = thead+tbody;
-console.log(newhtml)
-console.log(oldhtml)
+//console.log(newhtml)
+//console.log(oldhtml)
 if(search2==""){
   if(oldhtml!==newhtml){
     document.getElementById("tabdetails").innerHTML = thead+tbody;
