--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -859,7 +859,7 @@ fetchd ();
 
            var updatas = document.getElementById("popup-inner").querySelectorAll("input,select");
            for (var f =0;f<updatas.length-1;f++ ){
-
+console.log(updatas[f].value,vdatas[id-2][f]);
             
             if (String(updatas[f].value) !== String(vdatas[id-2][f])){
               if(updatas[f].parentElement.style.display!=="none"){
