--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -335,7 +335,7 @@ document.getElementById("popup-40").classList.toggle("active");
             <div class="close-btn" onclick="togglePopup()">&times;</div>
         <div class="popup-inner" id="popup-inner">
             <h1>Edit User Details</h1>
-            <div class="form-element" style="margin-top: 20px;">
+            <div class="form-element" style="margin-top: 20px;margin-bottom: 20px;">
               <div style="background-color: rgb(237, 235, 235); border-radius: 110px;height: 110px;width: 110px;margin-top: 0px;margin-left: auto;margin-right: auto;">
                 <img  style=" border-radius: 50px; width: 100px; height: 100px; object-fit: cover;margin-top: 5px;" src="" alt="" srcset="">
 <input  type="file" accept=".JPG,.jpg,.JPEG,.jpeg,.PNG,.png" onclick="formfileupload(this)"/>
