--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -297,7 +297,7 @@ document.getElementById("popup-40").classList.toggle("active");
       
             </section>
     </main>
-    <div id="load" class="load" > 
+    <div id="load" class="load" style="z-index: 700;"> 
         <div class="loader" id="loader"> 
       
           </div> 
@@ -1130,7 +1130,7 @@ vheads.push(updatas[f].name)
   var imgid = imgsplit[5];
         document.getElementById("loader").style.display="none"; 
         document.getElementById("message").textContent="Upload Successful";
-        btn.previousElementSibling.src = "https://drive.google.com/thumbnail?id="+imgid+"=w1000";
+        btn.previousElementSibling.src = "https://drive.google.com/thumbnail?id="+imgid+"&sz=w1000";
         setTimeout(function () { document.getElementById("load").style.display="none"; },2000);
     }
     </script>
