--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -865,8 +865,8 @@ fetchd ();
 console.log(updatas[f].value,vdatas[id-2][f]);
             
             if (String(updatas[f+1].value) !== String(vdatas[id-2][f])){
-              if(updatas[f].parentElement.style.display!=="none"){
-                tobeupdatehead.push(vheads[f+1]);
+              if(updatas[f].parentElement.style.display!=="none"&&vheads[f]!=null){
+                tobeupdatehead.push(vheads[f]);
                 tobeupdatedata.push(updatas[f].value);
               }
        
