--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -761,7 +761,7 @@ continue;
 }
 if (d==0){
   if (datas[r][d].includes("google.com")){
-    datas[r][d] = "https://google.com"+datas[r][d];
+    datas[r][d] = datas[r][d];
   }
   else{
     datas[r][d] = "https://spcniftemt.pages.dev/user/"+datas[r][d];
