--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -866,13 +866,16 @@ console.log(updatas[f+1].value,vdatas[id-2][f]);
             
             if (String(updatas[f+1].value) !== String(vdatas[id-2][f])){
               console.log(updatas[f+1].value,vdatas[id-2][f])
-              if(vheads[f]=="Profile Pic"&&updatas[f+1].value==""){
+
+              if(updatas[f].parentElement.style.display!=="none"&&vheads[f]!=null){
+                if(vheads[f]=="Profile Pic"&&updatas[f+1].value==""){
                 continue
               }
-              if(updatas[f].parentElement.style.display!=="none"&&vheads[f]!=null){
+              else{
                 console.log(updatas[f+1].value,vdatas[id-2][f])
                 tobeupdatehead.push(vheads[f]);
                 tobeupdatedata.push(updatas[f+1].value);
+              }
               }
        
             }
