--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -870,7 +870,7 @@ console.log(updatas[f+1].value,vdatas[id-2][f]);
 
               if(updatas[f].parentElement.style.display!=="none"&&!vheads[f]==null){
                 if(vheads[f]=="Profile Pic"&&updatas[f+1].value==""){
-             
+             console.log("profilepic")
               }
               else{
                 console.log(updatas[f+1].value,vdatas[id-2][f])
