--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -867,7 +867,7 @@ fetchd ();
          //   console.log(vheads,updatas)
 console.log(updatas[f+1].value,vdatas[id-2][f]);
             if(vheads[f]=="Alloted Member"){
-  var check_data = updatas[f+1].innerHTML;
+  var check_data = updatas[f+1].selectedIndex;
             }
             else{
               var check_data = updatas[f+1].value;
