--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -868,6 +868,7 @@ fetchd ();
 console.log(updatas[f+1].value,vdatas[id-2][f]);
             if(vheads[f]=="Alloted Member"){
               var foptions = updatas[f+1].options;
+              console.log(foptions)
   var coption = updatas[f+1].selectedIndex;
   var check_data1 = foptions[coption].innerHTML;
             }
