--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -870,6 +870,7 @@ console.log(updatas[f+1].value,vdatas[id-2][f]);
               var foptions = updatas[f+1].options;
               console.log(foptions)
   var coption = updatas[f+1].selectedIndex;
+  console.log(coption, foptions[coption],foptions[coption].innerHTML)
   var check_data1 = foptions[coption].innerHTML;
             }
             else{
