--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -342,6 +342,7 @@ document.getElementById("popup-40").classList.toggle("active");
 <input type="hidden" name="afs D.link" class="1lz0E2hzYz0x1Z2GVVwYQlgAAJVk6paTx" value=""/>
 
               </div>
+            </div>
             <div class="form-element" style="margin-top: 20px;">
               <span class="q">Name</span>
               <input type="text" name="Name" id="Name"  placeholder="Enter your Name" />
@@ -439,11 +440,14 @@ document.getElementById("popup-40").classList.toggle("active");
               <div class="close-btn" onclick="togglePopup40()">&times;</div>
           <div class="popup-inner" id="popup-inner-add"  style="padding: 50px;">
               <h1>Add Student</h1>
-              <div class="form-element">
-              <div style="background-color: rgb(237, 235, 235); border-radius: 110px;height: 110px;width: 110px;margin-top: 0px;margin-left: auto;margin-right: auto;">
-                <img  style=" border-radius: 50px; width: 100px; height: 100px; object-fit: cover;" src="" alt="" srcset="">
-              </div>
-            </div>              
+              <div class="form-element" style="margin-top: 20px;margin-bottom: 20px;">
+                <div style="background-color: rgb(237, 235, 235); border-radius: 110px;height: 110px;width: 110px;margin-top: 0px;margin-left: auto;margin-right: auto;">
+                  <img  style=" border-radius: 50px; width: 100px; height: 100px; object-fit: cover;margin-top: 5px;" src="" alt="" srcset="">
+  <input  type="file" accept=".JPG,.jpg,.JPEG,.jpeg,.PNG,.png" onclick="formfileupload(this)"/>
+  <input type="hidden" name="afs D.link" class="1lz0E2hzYz0x1Z2GVVwYQlgAAJVk6paTx" value=""/>
+  
+                </div>
+              </div>             
               <div class="form-element">
                 <span class="q">Name</span>
                 <input required type="text" name="Name"   placeholder="Enter your Name" />
