--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -444,7 +444,7 @@ document.getElementById("popup-40").classList.toggle("active");
                 <div style="background-color: rgb(237, 235, 235); border-radius: 110px;height: 110px;width: 110px;margin-top: 0px;margin-left: auto;margin-right: auto;">
                   <img  style=" border-radius: 50px; width: 100px; height: 100px; object-fit: cover;margin-top: 5px;" src="" alt="" srcset="">
   <input  type="file" accept=".JPG,.jpg,.JPEG,.jpeg,.PNG,.png" onclick="formfileupload(this)"/>
-  <input type="hidden" name="afs D.link" class="1lz0E2hzYz0x1Z2GVVwYQlgAAJVk6paTx" value=""/>
+  <input type="hidden" name="Profile Pic" class="1lz0E2hzYz0x1Z2GVVwYQlgAAJVk6paTx" value=""/>
   
                 </div>
               </div>             
@@ -974,7 +974,7 @@ function addstudent(button){
 var values = [];
 var vheads = [];
            var updatas = document.getElementById("popup-inner-add").querySelectorAll("input,select");
-           for (var f =0;f<updatas.length-1;f++ ){
+           for (var f =1;f<updatas.length-1;f++ ){
             console.log(updatas[f].value,updatas[f].required);
             console.log(updatas[f].value==""&&updatas[f].required);
             if(updatas[f].value==""&&updatas[f].required){
