--- a/f&r/all-users.html
+++ b/f&r/all-users.html
@@ -1004,6 +1004,7 @@ vheads.push(updatas[f].name)
            for (var f =0;f<updatas.length-1;f++ ){
            updatas[f].value="";
            }
+           updatas[0].previousElementSibling.src="";
             togglePopup40()
             document.getElementById("load").style.display="initial";
            document.getElementById("loader").style.display="block"; 
