--- a/f&r/in.html
+++ b/f&r/in.html
@@ -1,1 +1,1 @@
-<img  style="scale:200%;border-radius: 50px; width: 50px; height: 50px; object-fit: cover;margin-top: 30px;margin-left: 10px;" src="Profile Pics/5.JPG" alt="" srcset="">
+<img style=" border-radius: 50px; width: 100px; height: 100px; object-fit: cover;" src="https://drive.google.com/thumbnail?id=1Mg6gOV-SOXKNIEMOI_5UlYy_zNi9Qtqy&sz=w1000" alt="" srcset="">
