--- a/f&r/past.html
+++ b/f&r/past.html
@@ -565,7 +565,7 @@ if (tdata.includes(sdata)){
     document.getElementById("loader").style.display="none"; 
                     document.getElementById("message").textContent = "";
                     document.getElementById("load").style.display = "none";
-                    statuscolor();
+                   // statuscolor();
             
     })
     
